# pdf-remote-signature-csc-protocol

./: .gitignore  Cargo.toml  LICENSE  PLAN.md  README.md  docker-compose.yml
certs/: ca-cert.pem  ca-key.pem  generate_certs.sh  user-cert.pem  user-key.pem
certs/nowina/: ca-chain.pem  user-cert.pem  user-key.pem
docker/server/: Dockerfile
docker/softhsm/: Dockerfile  init-hsm.sh  softhsm2.conf
docs/: SOFTHSM-GUIDE.md  openapi.yaml  postman_collection.json
examples/: gen_test_pdf.rs  gen_test_signature_image.rs  test_all_variants.rs
src/: main.rs
src/client/: csc_client.rs  mod.rs  pdf_finalizer.rs  pdf_preparer.rs  signature_appearance.rs  workflow.rs
src/common/: csc_types.rs  mod.rs
src/server/: app.rs  auth.rs  credentials.rs  hsm.rs  info.rs  ltv.rs  mod.rs  multipart.rs  pki.rs  pki_backend.rs  sign_pdf.rs  signing.rs  validation.rs
test-files/: all-signing-test-report.txt  hsm-signing-test-report.txt  test_all_signing.sh  test_comprehensive.sh  test_endpoints.sh  test_form_data.sh  test_hsm_signing.sh  test_nowina_cert.sh  test_server_side_sign.sh  test_visible_signature.sh
